package/udops/uniphore/output.log
nohup: ignoring input
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2023 - 12:49:27
Django version 4.2.1, using settings 'uniphore.settings'
Starting development server at http://ec2-100-21-13-201.us-west-2.compute.amazonaws.com:8000/
Quit the server with CONTROL-C.

/home/ubuntu/udops_api/package/udops/src/dep/ucorpus.py changed, reloading.
Watching for file changes with StatReloader
Performing system checks...

Exception in thread django-main-thread:
Traceback (most recent call last):
  File "/usr/lib/python3.8/threading.py", line 932, in _bootstrap_inner
    self.run()
  File "/usr/lib/python3.8/threading.py", line 870, in run
    self._target(*self._args, **self._kwargs)
  File "/usr/local/lib/python3.8/dist-packages/django/utils/autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "/usr/local/lib/python3.8/dist-packages/django/core/management/commands/runserver.py", line 133, in inner_run
    self.check(display_num_errors=True)
  File "/usr/local/lib/python3.8/dist-packages/django/core/management/base.py", line 485, in check
    all_issues = checks.run_checks(
  File "/usr/local/lib/python3.8/dist-packages/django/core/checks/registry.py", line 88, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
  File "/usr/local/lib/python3.8/dist-packages/django/core/checks/urls.py", line 14, in check_url_config
    return check_resolver(resolver)
  File "/usr/local/lib/python3.8/dist-packages/django/core/checks/urls.py", line 24, in check_resolver
    return check_method()
  File "/usr/local/lib/python3.8/dist-packages/django/urls/resolvers.py", line 494, in check
    for pattern in self.url_patterns:
  File "/usr/local/lib/python3.8/dist-packages/django/utils/functional.py", line 57, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/usr/local/lib/python3.8/dist-packages/django/urls/resolvers.py", line 715, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/usr/local/lib/python3.8/dist-packages/django/utils/functional.py", line 57, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/usr/local/lib/python3.8/dist-packages/django/urls/resolvers.py", line 708, in urlconf_module
    return import_module(self.urlconf_name)
  File "/usr/lib/python3.8/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1014, in _gcd_import
  File "<frozen importlib._bootstrap>", line 991, in _find_and_load
  File "<frozen importlib._bootstrap>", line 975, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 671, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 848, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/ubuntu/udops_api/package/udops/uniphore/uniphore/urls.py", line 21, in <module>
    path('', include('APP.urls')),
  File "/usr/local/lib/python3.8/dist-packages/django/urls/conf.py", line 38, in include
    urlconf_module = import_module(urlconf_module)
  File "/usr/lib/python3.8/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1014, in _gcd_import
  File "<frozen importlib._bootstrap>", line 991, in _find_and_load
  File "<frozen importlib._bootstrap>", line 975, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 671, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 848, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/ubuntu/udops_api/package/udops/uniphore/APP/urls.py", line 3, in <module>
    from . import views
  File "/home/ubuntu/udops_api/package/udops/uniphore/APP/views.py", line 1, in <module>
    from udops.src.dep.ucorpus import *
  File "/home/ubuntu/udops_api/package/udops/src/dep/ucorpus.py", line 121
    elif:
        ^
SyntaxError: invalid syntax
/home/ubuntu/udops_api/package/udops/src/dep/ucorpus.py changed, reloading.
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2023 - 12:49:51
Django version 4.2.1, using settings 'uniphore.settings'
Starting development server at http://ec2-100-21-13-201.us-west-2.compute.amazonaws.com:8000/
Quit the server with CONTROL-C.

/home/ubuntu/udops_api/package/udops/src/dep/Manager/CorpusMetadataManager.py changed, reloading.
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2023 - 12:52:19
Django version 4.2.1, using settings 'uniphore.settings'
Starting development server at http://ec2-100-21-13-201.us-west-2.compute.amazonaws.com:8000/
Quit the server with CONTROL-C.

